[gd_scene load_steps=3 format=3 uid="uid://4b0ofa4dnvtd"]

[ext_resource type="PackedScene" uid="uid://dexludemq64ko" path="res://Scenes/SC_Background.tscn" id="1_e1sqm"]
[ext_resource type="Script" path="res://Scripts/s_paretto.gd" id="1_pkvxt"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pkvxt")
axis_color = Color(0, 0, 0, 1)
bar_text_color = Color(0, 0, 0, 1)
cumulative_line_color = Color(0.713726, 0.27451, 0.372549, 1)
cutoff_line_color = Color(0.32549, 0.478431, 0.352941, 1)
bar_first_color = Color(0.556863, 0.721569, 0.898039, 1)
bar_last_color = Color(0.713726, 0.27451, 0.372549, 1)

[node name="Background" parent="." instance=ExtResource("1_e1sqm")]

[node name="SplitContainer" type="SplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 240

[node name="ScrollContainer" type="ScrollContainer" parent="SplitContainer"]
layout_mode = 2

[node name="ParametersContainer" type="VBoxContainer" parent="SplitContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddButton" type="Button" parent="SplitContainer/ScrollContainer/ParametersContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Добавить"

[node name="DiagramContainer" type="Control" parent="SplitContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[node name="SaveButton" type="Button" parent="SplitContainer/DiagramContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Сохранить"
